[package]
name = "signaled"
version = "0.1.0"
edition = "2024"

[dependencies]
futures-util = "0.3"
reqwest = { version = "0.12", features = ["stream"] }
rodio = { version = "0.20", features = ["symphonia-aac"] }
tokio = { version = "1.44", features = ["macros", "rt-multi-thread"] }
log = "0.4"
crossterm = "0.29"
ratatui = "0.29"
tui-logger = "0.17"
rustfft = "6.3"
argh = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
debug = false